--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <meta name="apple-mobile-web-app-title" content="InvestTracker"/>
-  <link rel="manifest" href="/manifest.json"/>
+  <link rel="manifest" href="/investment-tracker/manifest.json"/>
   <link rel="apple-touch-icon" href="https://img.icons8.com/color/192/000000/investment-portfolio.png"/>
   <title>📈 Investment Tracker</title>
   <style>
@@ -67,7 +67,7 @@
   <script>
     // ── Register real service worker ──────────────────
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('/investment-tracker/sw.js', { scope: '/investment-tracker/' })
         .then(reg => {
           console.log('✅ SW registered:', reg.scope);
           // Ask for notification permission on first load
