--- a/index.html
+++ b/index.html
@@ -8,98 +8,99 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <meta name="apple-mobile-web-app-title" content="InvestTracker"/>
-  <link rel="manifest" href="/investment-tracker/manifest.json"/>
+  <meta name="application-name" content="InvestTracker"/>
+  <meta name="description" content="Personal investment tracker for Ajay Babu and Sachi"/>
+
+  <!-- ✅ Manifest — full absolute path for GitHub Pages subfolder -->
+  <link rel="manifest" href="https://ajaybabutiwari.github.io/investment-tracker/manifest.json"/>
   <link rel="apple-touch-icon" href="https://img.icons8.com/color/192/000000/investment-portfolio.png"/>
+
   <title>📈 Investment Tracker</title>
+
+  <!-- ✅ Register SW immediately — inline, synchronous, no conditions -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register(
+          'https://ajaybabutiwari.github.io/investment-tracker/sw.js',
+          { scope: 'https://ajaybabutiwari.github.io/investment-tracker/' }
+        ).then(function(reg) {
+          console.log('SW registered:', reg.scope);
+        }).catch(function(err) {
+          console.log('SW error:', err);
+        });
+      });
+    }
+  </script>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { height: 100%; overflow: hidden; background: #1E3A5F; }
-
-    /* Loading screen shown before iframe loads */
     #loading {
       position: fixed; inset: 0; background: #1E3A5F;
       display: flex; flex-direction: column; align-items: center;
-      justify-content: center; gap: 16px; z-index: 10;
-      transition: opacity 0.4s;
+      justify-content: center; gap: 16px; z-index: 10; transition: opacity 0.5s;
     }
     #loading.hide { opacity: 0; pointer-events: none; }
-    .spin-icon { font-size: 52px; animation: bounce 0.8s infinite alternate; }
-    @keyframes bounce { from { transform: translateY(0); } to { transform: translateY(-10px); } }
+    .icon { font-size: 56px; animation: bounce 0.9s infinite alternate; }
+    @keyframes bounce { from { transform: translateY(0); } to { transform: translateY(-12px); } }
     .spinner {
-      width: 36px; height: 36px; border: 3px solid rgba(255,255,255,0.2);
-      border-top-color: #60A5FA; border-radius: 50%;
-      animation: spin 0.7s linear infinite;
+      width: 38px; height: 38px;
+      border: 3px solid rgba(255,255,255,0.15);
+      border-top-color: #60A5FA;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
-    .load-text { color: #93C5FD; font-family: 'Segoe UI', sans-serif; font-size: 14px; font-weight: 600; }
-
-    /* Offline banner */
-    #offlineBanner {
+    .txt { color: #93C5FD; font-family: 'Segoe UI', sans-serif; font-size: 14px; font-weight: 600; }
+    .sub { color: #60A5FA; font-family: 'Segoe UI', sans-serif; font-size: 11px; }
+    #offline {
       display: none; position: fixed; top: 0; left: 0; right: 0; z-index: 100;
       background: #92400e; color: #fff; text-align: center;
-      padding: 8px; font-family: 'Segoe UI', sans-serif; font-size: 13px; font-weight: 600;
+      padding: 9px; font-family: 'Segoe UI', sans-serif; font-size: 13px; font-weight: 600;
     }
-
-    /* The iframe fills entire screen */
-    #appFrame {
-      width: 100%; height: 100%; border: none;
-      display: block; background: #1E3A5F;
-    }
+    #appFrame { width: 100%; height: 100%; border: none; display: block; }
   </style>
 </head>
 <body>
 
-  <div id="offlineBanner">📵 You're offline — showing cached data</div>
+  <div id="offline">📵 You are offline — showing cached version</div>
 
   <div id="loading">
-    <div class="spin-icon">📈</div>
+    <div class="icon">📈</div>
     <div class="spinner"></div>
-    <div class="load-text">Loading Investment Tracker...</div>
+    <div class="txt">Investment Tracker</div>
+    <div class="sub">Ajay Babu & Sachi</div>
   </div>
 
   <iframe
     id="appFrame"
     src="https://script.google.com/macros/s/AKfycbwZZ0bSY3io2RQ1vU_y24EVsUB9A6fuOUIj2nyap-2Sy-fgR2BNgyZ6jKcwe7biCBmR/exec"
-    allow="notifications"
+    allow="notifications; camera; microphone"
     loading="eager">
   </iframe>
 
   <script>
-    // ── Register real service worker ──────────────────
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/investment-tracker/sw.js', { scope: '/investment-tracker/' })
-        .then(reg => {
-          console.log('✅ SW registered:', reg.scope);
-          // Ask for notification permission on first load
-          if (Notification.permission === 'default') {
-            setTimeout(() => Notification.requestPermission(), 3000);
-          }
-        })
-        .catch(err => console.log('SW error:', err));
-    }
-
-    // ── Hide loader when iframe loads ─────────────────
-    document.getElementById('appFrame').addEventListener('load', () => {
-      setTimeout(() => {
+    // Hide loader when iframe finishes loading
+    document.getElementById('appFrame').addEventListener('load', function() {
+      setTimeout(function() {
         document.getElementById('loading').classList.add('hide');
-      }, 800);
+      }, 600);
     });
 
-    // ── Offline detection ─────────────────────────────
-    function updateOnlineStatus() {
-      document.getElementById('offlineBanner').style.display =
-        navigator.onLine ? 'none' : 'block';
+    // Offline banner
+    function checkOnline() {
+      document.getElementById('offline').style.display = navigator.onLine ? 'none' : 'block';
     }
-    window.addEventListener('online',  updateOnlineStatus);
-    window.addEventListener('offline', updateOnlineStatus);
-    updateOnlineStatus();
+    window.addEventListener('online', checkOnline);
+    window.addEventListener('offline', checkOnline);
+    checkOnline();
 
-    // ── Handle page shortcuts (?page=add etc) ─────────
-    const urlParams = new URLSearchParams(window.location.search);
-    const page = urlParams.get('page');
+    // Handle shortcut deep links (?page=add / ?page=alerts)
+    var page = new URLSearchParams(window.location.search).get('page');
     if (page) {
-      const baseUrl = 'https://script.google.com/macros/s/AKfycbwZZ0bSY3io2RQ1vU_y24EVsUB9A6fuOUIj2nyap-2Sy-fgR2BNgyZ6jKcwe7biCBmR/exec';
-      document.getElementById('appFrame').src = baseUrl + '?page=' + page;
+      var base = 'https://script.google.com/macros/s/AKfycbwZZ0bSY3io2RQ1vU_y24EVsUB9A6fuOUIj2nyap-2Sy-fgR2BNgyZ6jKcwe7biCBmR/exec';
+      document.getElementById('appFrame').src = base + '?page=' + page;
     }
   </script>
 </body>
